--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "qiskit" %}
-{% set version = "0.45.1" %}
+{% set version = "1.0.0b1" %}
+
 
 package:
   name: {{ name|lower }}
@@ -7,20 +8,47 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/qiskit-{{ version }}.tar.gz
-  sha256: 1ae868c514db3e35c0a75d8ec08002491b9301586647637f11f744f8a376bb9e
+  sha256: 0ae9186abe5e0948cb241ab507ab84a389556417dc8d634ddae047c21c269dd2
 
 build:
-  noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
   number: 0
+  script:
+    - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
+    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
+  build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - {{ compiler('rust') }}
+    - cargo-bundle-licenses
   host:
-    - python >=3.8
     - pip
+    - python
+    - setuptools
+    - setuptools-rust
+    - wheel
   run:
-    - python >=3.8
-    - qiskit-terra ==0.45.1
+    - typing-extensions  # [py<311]
+    - rustworkx >=0.13.0
+    - python
+    - numpy >=1.17,<2
+    - psutil >=5
+    - scipy >=1.5
+    - sympy >=1.3
+    - dill >=0.3
+    - python-dateutil >=2.8.0
+    - stevedore >=3.0.0
+    - python-symengine >=0.9,!=0.10
+  run_constrained:
+    - matplotlib >=3.3
+    - matplotlib-base >=3.3
+    - ipywidgets >=7.3.0
+    - pillow >=4.2.1
+    - pylatexenc >=1.4
+    - seaborn >=0.9.0
+    - z3-solver >=4.7
+    - qiskit-qasm3-import >=0.1.0
 
 test:
   imports:
@@ -33,8 +61,12 @@ test:
 about:
   home: https://qiskit.org/
   summary: Software for developing quantum computing programs
+  doc_url: https://qiskit.org/documentation/index.html
+  dev_url: https://github.com/Qiskit/qiskit
   license: Apache-2.0
-  license_file: LICENSE.txt
+  license_file:
+    - THIRDPARTY.yml
+    - LICENSE.txt
 
 extra:
   recipe-maintainers:
