--- a/.ci_support/osx_64_python3.10.____cpython.yaml
+++ b/.ci_support/osx_64_python3.10.____cpython.yaml
@@ -1,5 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
+- '10.12'
+c_compiler:
+- clang
+c_compiler_version:
+- '16'
 channel_sources:
 - conda-forge
 channel_targets:
