--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,6 +52,7 @@ requirements:
     - pylatexenc >=1.4
     - seaborn >=0.9.0
     - z3-solver >=4.7
+    - qiskit-terra >=1.0  # qiskit 1.0 no longer depends on qiskit-terra and must not be installed with it. qiskit-terra >=1.0 should never be published.
 
 test:
   imports:
