--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,6 +61,9 @@ test:
     - pip check
   requires:
     - pip
+    # Temporary workaround for missing dependency of pbr which is a dependency of stevedore
+    # Can be removed after https://github.com/conda-forge/pbr-feedstock/pull/53 is merged
+    - setuptools
 
 about:
   home: https://www.ibm.com/quantum/qiskit
