--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,5 @@
 bot:
   automerge: true
-  check_solvable: true
   inspection: update-grayskull
 build_platform:
   linux_aarch64: linux_64
@@ -9,6 +8,7 @@ build_platform:
 conda_build:
   error_overlinking: true
   pkg_format: '2'
+conda_build_tool: rattler-build
 conda_forge_output_validation: true
 github:
   branch_name: main
